--- a/src/main/resources/templates/post/post-view.html
+++ b/src/main/resources/templates/post/post-view.html
@@ -86,7 +86,10 @@
                                     </span>
                                     <span class="views">조회수: <span th:text="${post.viewCount}">0</span></span>
                                 </div>
-
+                                <!-- 수정 버튼 (작성자만 보이도록 설정) -->
+                                <div class="text-right mb-3" th:if="${isPostOwner}">
+                                    <a th:href="@{'/post/edit/' + ${post.id}}" class="btn btn-primary btn-sm">수정하기</a>
+                                </div>
                                 <!-- 좋아요 버튼 -->
                                 <div class="text-center mt-4">
                                     <button class="btn btn-outline-danger" id="like-button">
@@ -120,7 +123,7 @@
                         <h4 class="mb-3">조리 순서</h4>
                         <div id="instruction-list"></div>
 
-                        <a href="/recipes" class="btn btn-secondary btn-block mt-4">목록으로 돌아가기</a>
+                        <button onclick="goBack()" class="btn btn-secondary btn-block mt-4">목록으로 돌아가기</button>
                     </div>
                 </div>
             </div>
@@ -134,6 +137,13 @@
 <div id="instructions-json" th:utext="${post.instructions}" style="display:none;"></div>
 
 <script>
+    function goBack() {
+        if (document.referrer && document.referrer.includes('/post/list')) {
+            window.history.back();
+        } else {
+            window.location.href = '/post/list';
+        }
+    }
 
     $(document).ready(function() {
         $('#like-button').on('click', function() {
