--- a/src/main/resources/templates/user/mypage.html
+++ b/src/main/resources/templates/user/mypage.html
@@ -83,7 +83,7 @@ input:checked + .slider:before {
 
 	<button id="editBtn" class="btn btn-primary">수정하기</button>
  
-	<script>
+	<!-- <script>
 	document.addEventListener("DOMContentLoaded", function () {
 	    const token = localStorage.getItem("token");
 
@@ -175,7 +175,7 @@ input:checked + .slider:before {
 
 	});
 
-	</script>
+	</script> -->
 	
 	<script src="/js/common.js"></script>
 </body>
