fix : build-gradle

--- a/src/main/resources/templates/post/posts.html
+++ b/src/main/resources/templates/post/posts.html
@@ -112,6 +112,7 @@
     </style>
 </head>
 <body class="bg-light">
+<div th:replace="~{layout/header :: header}">Header</div>
 <div class="container mt-5 mb-5">
 
     <div class="row post-grid">
