feature update Security & Mapping & Version issue

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,12 +29,7 @@
         </form>
          <p class="btn btn-secondary btn-md mt-5"><a href="/user/register" class="text-secondary-emphasis text-light">회원가입</a></p>
 
-
 </div>
-    
-  
-
-    
 
     <script>
 
