--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -15,18 +15,18 @@
 	
     <div class="text-end">
         <!-- 로그인된 사용자의 이름을 표시 -->
-       <!--  <span id="" class="text-white me-2" sec:authentication="principal.username"></span> -->
-    
-        <!-- 로그인된 경우 마이페이지 및 로그아웃 버튼, 그렇지 않으면 로그인 및 회원가입 버튼
-        <div sec:authorize="isAuthenticated()">
+        <div th:if="${#authentication != null and #authentication.name != 'anonymousUser'}">
+            <!-- 로그인된 경우 -->
+            <span class="text-white me-2" th:text="${#authentication.name} + '님 반갑습니다✨️'"></span>
+
             <a href="/user/mypage" class="btn btn-outline-light me-2" id="mypage">My Page</a>
             <a href="/user/logout" role="button" id="logout" class="btn btn-outline-light me-2">Logout</a>
         </div>
-        <div sec:authorize="!isAuthenticated()">
+        <div th:if="${#authentication == null or #authentication.name == 'anonymousUser'}">
+            <!-- 로그인되지 않은 경우 -->
             <a href="/user/login" role="button" id="login" class="btn btn-outline-light me-2">로그인</a>
             <a href="/user/register" role="button" id="register" class="btn btn-outline-light me-2">회원가입</a>
         </div>
-         -->
     </div>
         </div>
     </div>
