feature update mypage & view page

--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -8,13 +8,11 @@
 <th:block th:fragment="header">
   <header class="p-3 bg-dark text-white">
     <div class="container">
-       
-
-	
+    
 	<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li>
-                <a href="/" class="nav-link px-2 text-secondary" style="font-weight: bold; color: #fff; text-decoration: none;">
+                <a href="/" class="nav-link px-2 h3" style="font-weight: bold; color: #fff; text-decoration: none;">
                요리왕 비룡</a></li>
                 <!-- 레시피 메뉴 추가 -->
                 <li><a href="/post/list" class="nav-link px-2 text-white">레시피</a></li> <!-- 레시피 메뉴 -->
