--- a/src/main/resources/templates/user/mypage.html
+++ b/src/main/resources/templates/user/mypage.html
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My Page</title>
 <link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-	crossorigin="anonymous">
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+	rel="stylesheet">
+<link href="/css/register.css" rel="stylesheet">
+	
 </head>
 
 <style>
@@ -23,27 +23,31 @@
 			<h3>마이페이지</h3>
 
 			<!-- 사용자 정보 -->
-			<div>
-				<label for="username">사용자아이디</label> <input type="text"
+			 <div class="form-floating mb-3">
+				<label for="username" class="form-label">아이디</label>
+				 <input type="text" class="form-control"
 					id="username" th:value="${username}" readonly>
 			</div>
+			
+			
 
 
-			<div>
-				<label for="email">이메일</label> <input type="email" id="email"
-					th:value="${email}" readonly>
-				<button type="button" class="btn btn-primary" id="editEmailBtn">이메일
+			 <div class="form-floating mb-3">
+				<label for="email" class="form-label">이메일</label> 
+				<input type="email" id="email"  class="form-control" th:value="${email}">
+				<button type="button" class="btn btn-outline-dark mt-3" id="editEmailBtn">이메일
 					수정</button>
 			</div>
 
-			<div>
-				<label for="createdDate">가입한날</label> <input type="text"
+			 <div class="form-floating mb-3">
+				<label for="createdDate" class="form-label">가입날</label> 
+				<input type="text" class="form-control"
 					id="createdDate" th:value="${createdDate}" readonly>
 			</div>
 
 
-			<div>
-				<button type="button" class="btn btn-primary" id="editPasswordBtn">비밀번호
+			<div class="form-floating mb-3">
+				<button type="button" class="btn btn-outline-dark" id="editPasswordBtn">비밀번호
 					변경</button>
 			</div>
 
